# cuclark

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CUCLARK.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  download_data.sh  download_data_newest.sh  download_data_release.sh  download_taxondata.sh  modern.md  setup_custom_db.sh  updateTaxonomy.sh
data/: reads.fa  results.csv  targets.txt
data/db/: db_central_k27_t1_s57777779_m0_light_4.tsk.ky
data/genomes/: ecoli.fa
data/test_real/: reads.fa  results.csv  targets.txt
data/test_real/db/: db_central_k27_t3_s57777779_m0_light_4.tsk.ky  db_central_k27_t3_s57777779_m0_light_4.tsk.lb
mwe/: README.md  run_viral_mwe.sh  test_example_fasta.sh  test_minimal.sh
src/: CuCLARK_hh.hh  CuClarkDB.cu  HashTableStorage_hh.hh  cuclark_cli.cc  cuda_utils.hh  dataType.hh  file.cc  file.hh  getAccssnTaxID.cc  getTargetsDef.cc  getfilesToTaxNodes.cc  hashTable_hh.hh  kmersConversion.cc  main.cc
tests/: test_build.sh  test_classify.sh  test_cli.sh  test_docker.sh  test_downloads.sh  test_real_data.sh
